--- a/templates/recommend.html
+++ b/templates/recommend.html
@@ -59,7 +59,7 @@
         }
     </style>
     <h1 align="center" class="pageHeader">
-        Movie Monk
+        Zelus-AF
         </h1>
         </head>
 <body>
