--- a/templates/home.html
+++ b/templates/home.html
@@ -1,17 +1,137 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>Zelus-AF</title>
-    <script src="https://unpkg.com/scrollreveal@4"></script>
-    <link href="../static/styles/styles.css" rel="stylesheet" type="text/css"/>
-    <link rel="icon" type="image/png" href="static/logo.png"/>
+  <title>Bio Technology</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="../static/styles/home.css">
+  <link rel="stylesheet" type="text/css" href="../static/styles/style.css">
+
+<style>
+  /* Make the image fully responsive*/
+  .carousel-inner img {
+    width: 100%;
+    height: 100%;
+  }
+</style>
 </head>
-<body class=bg>
-<h1 class="heading1">Zelus-AF</h1>
-<section id="form" class="try">
-    <form method="POST" action="/recommend">
-        <input type="text" required="required" name="Title" placeholder=" Enter your Search Product"><br><br>
-        <input type="submit" value="Lets Start Shopping!!"></form>
-</section>
-<script> ScrollReveal().reveal('.try');
-ScrollReveal().reveal('.heading1');</script>
-<br>
+<body>
+	<header>
+		<div>
+			<nav class="navbar navbar-expand-lg navbar-light bg-dark ">
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+					<a class="navbar-brand text-white bg-dark" href="#">LOGO</a>
+					<ul class="navbar-nav mr-auto mt-2 mt-lg-0 ">
+						<li class="nav-item active ">
+							<a class="nav-link text-white bg-dark" href="#">Home <span class="sr-only">(current)</span></a>
+						</li>
+						<li class="nav-item dropdown text-light">
+							<a class="nav-link dropdown-toggle text-white bg-dark" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								Bio Chemicals
+							</a>
+							<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+								<a class="dropdown-item" href="#">EDTA</a>
+								<a class="dropdown-item" href="#">SDS</a>
+								<a class="dropdown-item" href="#">TRIS Base</a>
+								<a class="dropdown-item" href="#">Sodium Citrate</a>
+								<a class="dropdown-item" href="#">Tris hydrochloride</a>
+								<a class="dropdown-item" href="#">Ethidium Bromide</a>
+								<a class="dropdown-item" href="#">Bovine Serum Albumin</a>
+							</div>
+						</li>
+					</ul>
+					<form class="form-inline my-2 my-lg-0" method="POST" action="/recommend">
+								<input type="text" required="required" name="Title" placeholder=" Enter your Search Product"><br><br>
+								<input type="submit" value="Lets Start Shopping!!">
+						<button class="btn btn-outline-success my-2 my-sm-0" type="submit" >Search</button>
+					</form>
+				</div>
+             </nav>
+         </div>
+    </header>
+	<!-- Indicators -->
+	<div class="container">
+	<div id="demo" class="carousel slide" data-ride="carousel">
+		<ul class="carousel-indicators">
+			<li data-target="#demo" data-slide-to="0" class="active"></li>
+			<li data-target="#demo" data-slide-to="1"></li>
+			<li data-target="#demo" data-slide-to="2"></li>
+		</ul>
+		<!-- The slideshow -->
+		
+		<div class="carousel-inner">
+			<div class="carousel-item active">
+				<img src="../static/3.jpg" alt="3.jpg" width="200" height="150">
+			</div>
+			<div class="carousel-item">
+				<img src="../static/2.jpg" alt="2.jpg" width="200" height="150">
+			</div>
+			<div class="carousel-item">
+				<img src="../static/1.jpg" alt="1.jpg" width="200" height="150">
+			</div>
+		</div>
+		<!-- Left and right controls -->
+		<a class="carousel-control-prev" href="#demo" data-slide="prev">
+			<span class="carousel-control-prev-icon"></span>
+		</a>
+		<a class="carousel-control-next" href="#demo" data-slide="next">
+			<span class="carousel-control-next-icon"></span>
+		</a>
+	</div>
+	
+			<!-- footer -->
+<div class="jumbotron jumbotron-fluid">
+<div class="container">
+<div class="footer">
+	<div class="wrapper8">
+    <div class="col1">
+      <p style="text-decoration: none; font-family: 'Montserrat', sans-serif; color: #111; font-size: 30px; padding-bottom: 18px;">Fight Against <b>COVID</b></p>
+      <a href="#" style="text-decoration: none; font-family: 'Montserrat', sans-serif; color: #959595; font-size: 17px;">team@fightagainstcovid.org</a>
+      <div class="icons" style="padding-bottom: 20px;">
+        <a href="#"><img src="facebook.png" class="social-media"></a>
+        <a href="#"><img src="twitter.png" class="social-media"></a>
+        <a href="#"><img src="instagram.png" class="social-media"></a>
+      </div>
+      <button class="join-btn" onClick="window.location.href = '#';" style="font-size: 15px;">Join Us</button>
+      <p style="text-decoration: none; font-family: 'Montserrat', sans-serif; color: #959595; font-size: 12px; padding-top: 10px;">&#169; 2020 Fight Against COVID</p>
+    </div>
+    <div class="col2">
+      <p style="text-decoration: none; font-family: 'Montserrat', sans-serif; color: #111; font-size: 16px; padding-bottom: 18px;">Our Programs</p>
+      <p style="line-height: 27px;">
+      <a href="#" class="links">The Happiness Program</a><br>
+      <a href="#" class="links">Sahaj Samadhi Meditation</a><br>
+      <a href="#" class="links">Sri Sri Yoga</a><br>
+      <a href="#" class="links">Advanced Meditation Program</a><br>
+      </p>
+    </div>
+    <div class="col3">
+      <p style="text-decoration: none; font-family: 'Montserrat', sans-serif; color: #111; font-size: 16px; padding-bottom: 18px;">Our Initiatives</p>
+      <p style="line-height: 27px;">
+      <a href="#" class="links">Education</a><br>
+      <a href="#" class="links">Water Conservation</a><br>
+      <a href="#" class="links">Rural Management</a><br>
+      <a href="#" class="links">Disaster Management</a><br>
+      </p>
+    </div>
+    <div class="col4">
+      <iframe src="https://www.youtube-nocookie.com/embed/flDGjBqR1GI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
+    </div>
+  </div>
+</div>
+		</div>
+	</div>
+	</div>
+	
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+</body>
+</html>
+
+
+
