Backend Product Options Added

--- a/templates/recommend.html
+++ b/templates/recommend.html
@@ -86,7 +86,7 @@
         <th>Price</th>
 <!--        <th>Vote Average</th>-->
 <!--        <th>Release Date</th>-->
-        <th>Product Overview</th>
+        <!-- <th>Product Overview</th> -->
     </tr>
 
     {% for d in allData %}
@@ -100,7 +100,7 @@
         <td>{{ d['popularity'] }}</td>
 <!--        <td>{{ d['vote_average'] }}</td>-->
 <!--        <td>{{ d['release_date'] }}</td>-->
-        <td >{{ d['overview'] }}</td>
+        <!-- <td >{{ d['overview'] }}</td> -->
     </tr>
       {% endfor %}
 
