--- a/templates/home.html
+++ b/templates/home.html
@@ -6,8 +6,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="../static/styles/home.css">
-	<link rel="stylesheet" type="text/css" href="../static/styles/styles.css">
+	<link rel="stylesheet" type="text/css" href="./static/styles/home.css">
+	<link rel="stylesheet" type="text/css" href="./static/styles/styles.css">
 
 	<style>
 		/* Make the image fully responsive*/
@@ -99,9 +99,9 @@
 							<a href="#"
 								style="text-decoration: none; font-family: 'Montserrat', sans-serif; color: #959595; font-size: 17px;">team@biocentric.com</a>
 							<div class="icons" style="padding-bottom: 20px;">
-								<a href="#"><img src="../static/facebook.png" class="social-media"></a>
-								<a href="#"><img src="../static/twitter.png" class="social-media"></a>
-								<a href="#"><img src="../static/instagram.png" class="social-media"></a>
+								<a href="#"><img src="./static/facebook.png" class="social-media"></a>
+								<a href="#"><img src="./static/twitter.png" class="social-media"></a>
+								<a href="#"><img src="./static/instagram.png" class="social-media"></a>
 							</div>
 							<button class="join-btn" onClick="window.location.href = 'https://vedantkhairnar.ml/';" style="font-size: 15px;">Join
 								Us</button>
