--- a/templates/home.html
+++ b/templates/home.html
@@ -51,6 +51,9 @@
 					<form class="form-inline my-2 my-lg-0" method="POST" action="/recommend">
 						<input type="text" required="required" name="Title"
 							placeholder=" Enter your Search Product"><br><br>
+
+						
+
 						<input type="submit" value="Search">
 					</form>
 				</div>
@@ -86,7 +89,7 @@
 				<span class="carousel-control-next-icon"></span>
 			</a>
 		</div>
-
+	
 		<!-- footer -->
 		<div class="jumbotron jumbotron-fluid">
 			<div class="container">
@@ -95,7 +98,7 @@
 						<div class="col1">
 							<p
 								style="text-decoration: none; font-family: 'Montserrat', sans-serif; color: #111; font-size: 30px; padding-bottom: 18px;">
-								 <b>BioCentric</b></p>
+								<b>BioCentric</b></p>
 							<a href="#"
 								style="text-decoration: none; font-family: 'Montserrat', sans-serif; color: #959595; font-size: 17px;">team@biocentric.com</a>
 							<div class="icons" style="padding-bottom: 20px;">
@@ -103,7 +106,8 @@
 								<a href="#"><img src="./static/twitter.png" class="social-media"></a>
 								<a href="#"><img src="./static/instagram.png" class="social-media"></a>
 							</div>
-							<button class="join-btn" onClick="window.location.href = 'https://vedantkhairnar.ml/';" style="font-size: 15px;">Join
+							<button class="join-btn" onClick="window.location.href = 'https://vedantkhairnar.ml/';"
+								style="font-size: 15px;">Join
 								Us</button>
 							<p
 								style="text-decoration: none; font-family: 'Montserrat', sans-serif; color: #959595; font-size: 12px; padding-top: 10px;">
