--- a/templates/home.html
+++ b/templates/home.html
@@ -49,12 +49,61 @@
 						</li>
 					</ul>
 					<form class="form-inline my-2 my-lg-0" method="POST" action="/recommend">
-						<input type="text" required="required" name="Title"
-							placeholder=" Enter your Search Product"><br><br>
+						<row>
+							<input type="text" required="required" name="Title"
+								placeholder="Enter your Search Product"><br><br>
+						</row>
+						<row>
+							<div>
+								<input type="checkbox" id="Loba Chemle" name="Loba Chemle">
+								<label for="Loba Chemle">Loba Chemle</label>
+							</div>
 
-						
+							<div>
+								<input type="checkbox" id="HIMEDIA" name="HIMEDIA">
+								<label for="HIMEDIA">HIMEDIA</label>
+							</div>
 
-						<input type="submit" value="Search">
+							<div>
+								<input type="checkbox" id="BR Biochem Life Sciences" name="BR Biochem Life Sciences">
+								<label for="BR Biochem Life Sciences">BR Biochem Life Sciences</label>
+							</div>
+
+							<div>
+								<input type="checkbox" id="Aura Biotech" name="Aura Biotech">
+								<label for="Aura Biotech">Aura Biotech</label>
+							</div>
+
+							<div>
+								<input type="checkbox" id="KT Labs" name="KT Labs">
+								<label for="KT Labs">KT Labs</label>
+							</div>
+
+							<div>
+								<input type="checkbox" id="Bangalore GeNel" name="Bangalore GeNel">
+								<label for="Bangalore GeNel">Bangalore GeNel</label>
+							</div>
+
+							<div>
+								<input type="checkbox" id="MERCK MILLIPORE" name="MERCK MILLIPORE">
+								<label for="MERCK MILLIPORE">MERCK MILLIPORE</label>
+							</div>
+
+							<div>
+								<input type="checkbox" id="CYBERLAB" name="CYBERLAB">
+								<label for="CYBERLAB">CYBERLAB</label>
+							</div>
+
+							<div>
+								<input type="checkbox" id="SigmaAldrich" name="SigmaAldrich">
+								<label for="SigmaAldrich">Sigma Aldrich</label>
+							</div>
+						</row>
+						<row>
+							<input type="submit" value="Search">
+						</row>
+
+
 					</form>
 				</div>
 			</nav>
@@ -89,7 +138,7 @@
 				<span class="carousel-control-next-icon"></span>
 			</a>
 		</div>
-	
+
 		<!-- footer -->
 		<div class="jumbotron jumbotron-fluid">
 			<div class="container">
