--- a/templates/home.html
+++ b/templates/home.html
@@ -165,7 +165,7 @@
 										</ul>
 									</li>
 									<li>
-										<a href="#">Medgenome</a>
+										<a href="#">Xelris</a>
 										<ul class="third-level-menu">
 											<li><a href="#">Sanger Sequencing</a></li>
 											<li><a href="#">Proteomics Services</a></li>
