--- a/templates/home.html
+++ b/templates/home.html
@@ -283,7 +283,7 @@
 								<a href="#"><img src="./static/twitter.png" class="social-media"></a>
 								<a href="#"><img src="./static/instagram.png" class="social-media"></a>
 							</div>
-							<button class="join-btn" onClick="window.location.href = 'https://vedantkhairnar.ml/';"
+							<button class="join-btn" onClick="window.location.href = '';"
 								style="font-size: 15px;">Join
 								Us</button>
 							<p
