DNA company add on link

--- a/templates/home.html
+++ b/templates/home.html
@@ -124,14 +124,14 @@
 									<li>
 										<a href="#">DNA Xperts </a>
 										<ul class="third-level-menu">
-											<li><a href="#">Next Generation Sequencing Services</a></li>
-											<li><a href="#">QPCR Services</a></li>
-											<li><a href="#">Proteomics Services</a></li>
-											<li><a href="#">Metabolomics Services</a></li>
-											<li><a href="#">Lipidomics Services</a></li>
-											<li><a href="#">Glycomics Services</a></li>
-											<li><a href="#">Flow Cytometry Services</a></li>
-											<li><a href="#">Bioinformatic Services</a></li>
+											<li><a href="https://www.dnaxperts.com/next-generation-sequencing-services/">Next Generation Sequencing Services</a></li>
+											<li><a href="https://www.dnaxperts.com/qpcr-services/">QPCR Services</a></li>
+											<li><a href="https://www.dnaxperts.com/proteomics-services/">Proteomics Services</a></li>
+											<li><a href="https://www.dnaxperts.com/metabolomics-services/">Metabolomics Services</a></li>
+											<li><a href="https://www.dnaxperts.com/lipidomics-services/">Lipidomics Services</a></li>
+											<li><a href="https://www.dnaxperts.com/glycomics-services/">Glycomics Services</a></li>
+											<li><a href="https://www.dnaxperts.com/flow-cytometry/">Flow Cytometry Services</a></li>
+											<li><a href="https://www.dnaxperts.com/bioinformatic-services/">Bioinformatic Services</a></li>
 										</ul>
 									</li>
 									<li>
