--- a/templates/home.html
+++ b/templates/home.html
@@ -8,12 +8,14 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./static/styles/home.css">
 	<link rel="stylesheet" type="text/css" href="./static/styles/styles.css">
+	<link rel="canonical" href="https://www.creative-tim.com" />
+
 
 	<style>
 		/* Make the image fully responsive*/
 		.carousel-inner img {
-			width: 200%;
-			height: 200%;
+			width: 100%;
+			height: 100%;
 		}
 
 		.third-level-menu {
